# vnu-eoffice

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: vnu-eoffice-monitor.yml
docs/: CONFIGURATION.md  ENDPOINTS.md  FIX-PLAN.md
openclaw/: REBUILD-PLAN.md
openclaw/vnu_eoffice/: SKILL.md  run_vnu_eoffice.sh  vnu_eoffice_openclaw.py
tests/: test_client.py  test_documents.py  test_importance.py  test_items.py  test_monitor.py  test_notify.py  test_openclaw_helper.py  test_scheduler_cli.py
vnu_eoffice/: __init__.py  cli.py  client.py  config.py  documents.py  importance.py  items.py  models.py  monitor.py  notify.py  scheduler.py
